--- a/web/src/app/components/login/login.component.html
+++ b/web/src/app/components/login/login.component.html
@@ -12,9 +12,7 @@
     {{ error }}
 </div>
 <body>
-    
-    <div class="container">
-        <div class="form-container">
+    <div class="container" style="border: 3px solid rgb(255, 0, 0); height: 600px; width: 40%; line-height: 1.5;">        <div class="form-container">
             <form class="form" [formGroup]="form">
                 <div class="alert alert-success fade show" role="alert" *ngIf="msg.msg != ''">
                     {{ msg.msg }}
@@ -39,9 +37,8 @@
                     <span class="text-danger" *ngIf="password.errors?.['minlength']">Debe de tener un minimo de 8 digitos</span>
                 </div>
 
-                <button type="submit" class="btn btn-warning mt-2" style="width: 100%; margin: auto;" [disabled]="form.invalid" (click)="Login()" >Enviar</button>
-                <p class="mt-3">¿No tienes cuenta? <a routerLink="/register">Registrate</a></p>
-            </form>
+                <button type="submit" class="btn btn-danger mt-2" style="width: 100%; margin: auto; background-color: #CB1D0D; border-radius: 20px; font-weight: bold; color: white;" [disabled]="form.invalid" (click)="Login()">Enviar</button>               
+                <p class="mt-3" style="text-align: center;">¿No tienes cuenta? <a routerLink="/register">Registrate</a></p>            </form>
         </div>
     </div>
 
