--- a/web/src/app/components/register/register.component.html
+++ b/web/src/app/components/register/register.component.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     
-    <div class="container">
+    <div class="container" style="border: 3px solid rgb(255, 0, 0); height: 600px; width: 40%; line-height: 1.5;">
         <div class="form-container">
             <form class="form" [formGroup]="form">
                 <div class="alert alert-success fade show" role="alert" *ngIf="msg">
@@ -56,8 +56,7 @@
                     </div>
                 </div>
 
-                <button type="submit" class="btn btn-warning mt-2" style="width: 100%; margin: auto;" [disabled]="form.invalid" (click)="registrar()" >Iniciar</button>
-                <p class="mt-3">¿Ya estás registrado? <a routerLink="">Inicia sesión</a></p>
+                <button type="submit" class="btn btn-warning mt-2" style="width: 100%; margin: auto; background-color: #CB1D0D; border-radius: 20px; font-weight: bold; color: white;" [disabled]="form.invalid" (click)="registrar()">Iniciar</button>                <p class="mt-3">¿Ya estás registrado? <a routerLink="">Inicia sesión</a></p>
             </form>
         </div>
     </div>
