--- a/web/src/app/components/navbar/navbar.component.html
+++ b/web/src/app/components/navbar/navbar.component.html
@@ -24,7 +24,7 @@
                         <a class="nav-link active" aria-current="page" [routerLink]="['nosotros']">Quienes somos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" [routerLink]="['cuenta']">Cuenta</a>
+                        <a class="nav-link active" aria-current="page" [routerLink]="['me']">Cuenta</a>
                     </li>
                 </ul>
             </div>
