--- a/web/src/app/components/navbar/navbar.component.html
+++ b/web/src/app/components/navbar/navbar.component.html
@@ -18,6 +18,9 @@
                         <a class="nav-link active" aria-current="page" [routerLink]="['dashboard']">Principal</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" [routerLink]="['paquetes']">Paquetes</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link active" aria-current="page" [routerLink]="['sensores']">Sensores</a>
                     </li>
                     <li class="nav-item">
