--- a/web/src/app/components/navbar/navbar.component.html
+++ b/web/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar ">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/dashboard">
+        <a class="navbar-brand" href="/navbar/dashboard">
             <img src="assets/logo.png" alt="Logo" class="logo1">
             <img src="assets/llanta.png" alt="Logo" class="logo">
         </a>
@@ -21,11 +21,9 @@
                         <a class="nav-link active" aria-current="page" [routerLink]="['paquetes']">Paquetes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" [routerLink]="['sensores']">Sensores</a>
+                        <a class="nav-link active" aria-current="page" [routerLink]="['mispaquetes']">Sensores</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" [routerLink]="['nosotros']">Quienes somos</a>
-                    </li>
+
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" [routerLink]="['me']">Cuenta</a>
                     </li>
