--- a/web/src/app/components/codigo/codigo.component.css
+++ b/web/src/app/components/codigo/codigo.component.css
@@ -6,68 +6,65 @@ body {
     background-position: center; 
 }
 
-.super-contenedor{
+.super-contenedor {
     width: 100%;
-    height: 89%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
 }
 
-.llama{
+.llama {
     width: 10%;
-    height: 150px;
+    height: 10vh; 
     border-radius: 50%;
     margin: auto;
     background-size: contain;
 }
 
 .contenedor {
-    width: 50%;
+    width: 90%; /* Ejemplo de ajuste de ancho relativo */
     background-color: rgb(255, 252, 252);
-    height: 50%;
+    height: 40vh; /* Ejemplo de ajuste de altura relativa */
     margin: auto;
-    padding: 20px;
-    border-radius: 15px;
-    box-shadow: 0px 2px 0 0 rgba(252, 249, 249, 0.2);
+    padding: 5vw; /* Ejemplo de ajuste de padding relativo */
+    border-radius: 5vw; /* Ejemplo de ajuste de radio de borde relativo */
+    box-shadow: 0 1vh 0 0 rgba(252, 249, 249, 0.2); /* Ejemplo de ajuste de sombra relativa */
 }
+
 .text {
-    width: 50%;
+    width: 90%; /* Ejemplo de ajuste de ancho relativo */
     margin: auto;
     text-align: center;
 }
 
 .form-control {
-    width: 50%;
-    margin-top: 10px;
+    width: 90%; /* Ejemplo de ajuste de ancho relativo */
+    margin-top: 2vh; /* Ejemplo de ajuste de margen superior relativo */
     margin: auto;
 }
-.btn{
-    width: 50%;
-    margin-top: 10px;
-    margin-left:  25%;
-    margin-right: 25%;
-}
 
-h1{
+.btn {
+    width: 90%; /* Ejemplo de ajuste de ancho relativo */
+    margin-top: 2vh; /* Ejemplo de ajuste de margen superior relativo */
+    margin-left: 5%; /* Ejemplo de ajuste de margen izquierdo relativo */
+    margin-right: 5%; /* Ejemplo de ajuste de margen derecho relativo */
+}
+.contenedor h1 {
     text-align: center;
 }
-.loading {
-    pointer-events: none; /* Evita que se puedan hacer clics en los elementos */
-}
 
-.disabled {
-    opacity: 0.5; /* Estilo opaco para los elementos */
-}
+@media screen and (max-width: 768px) {
+    /* Estilos específicos para pantallas más pequeñas */
+    .contenedor {
+        width: 95%; /* Ejemplo de ajuste de ancho relativo para pantallas pequeñas */
+        height: 30vh; /* Ejemplo de ajuste de altura relativa para pantallas pequeñas */
+    }
 
-.super-contenedor {
-    position: relative;
-}
+    .form-control {
+        width: 95%; /* Ejemplo de ajuste de ancho relativo para pantallas pequeñas */
+    }
 
-.loading-spinner {
-    /* Estilos para el spinner */
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 9999; /* Asegúrate de que esté por encima de todos los demás elementos */
+    .btn {
+        width: 95%; /* Ejemplo de ajuste de ancho relativo para pantallas pequeñas */
+    }
 }
