--- a/web/src/app/components/login/login.component.html
+++ b/web/src/app/components/login/login.component.html
@@ -12,7 +12,7 @@
     {{ error }}
 </div>
 <body>
-    <div class="container" style="border: 3px solid rgb(255, 0, 0); height: 600px; width: 40%; line-height: 1.5;">        <div class="form-container">
+    <div class="container" style="border: 3px solid rgb(255, 0, 0)"> <div class="form-container">
             <form class="form" [formGroup]="form">
                 <div class="alert alert-success fade show" role="alert" *ngIf="msg.msg != ''">
                     {{ msg.msg }}
